# aoc

./: Cargo.toml
aoc2022/: Cargo.toml
aoc2022/runner/: Cargo.toml
aoc2022/runner/src/: lib.rs
aoc2022/src/: day2.rs  day5.rs  day7.rs  day8.rs  lib.rs  main.rs
aoc22/: Cargo.toml  day.rs_template
aoc22/src/: day1.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs
day1/: Cargo.toml
day1/src/: lib.rs  main.rs
