[package]
name = "aoc22"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
runner = {path = "../runner"}
anyhow = {workspace = true}
itertools = "0.10"
nom = "7"
nom-supreme = "0.8"
either = "1"

[dev-dependencies]
pretty_assertions = "1"